--- a/EvoRL/概述.md
+++ b/EvoRL/概述.md
@@ -1,5 +1,7 @@
 ### EvoRL算法概览
 
+![image-20250815131527144](img/image-20250815131527144.png)
+
 ![image-20250815095854828](img/image-20250815095854828.png)
 
 ### 占主导地位的前三类方法：
